--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,9 @@
 flask==2.3.3
 flask-cors==4.0.0
+fastapi==0.104.1
+uvicorn==0.24.0
 transformers==4.30.2
 torch==2.2.2
 scikit-learn==1.3.0
 nltk==3.8.1
 pandas==2.0.3
-uvicorn==0.24.0
