--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,14 @@
-flask==2.3.3
-flask-cors==4.0.0
 fastapi==0.104.1
-uvicorn==0.24.0
-transformers==4.30.2
-torch==2.2.2
-scikit-learn==1.3.0
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
+python-multipart==0.0.6
+numpy==1.26.4
+pandas==2.1.4
+scikit-learn==1.3.2
+transformers==4.35.2
+torch==2.1.2
 nltk==3.8.1
-pandas==2.0.3
+spacy==3.7.2
+unidecode==1.3.6
+psycopg2-binary==2.9.9
+sqlalchemy==2.0.23
