--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,13 +2,13 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
 python-multipart==0.0.6
-numpy==1.26.4
-pandas==2.1.4
-scikit-learn==1.3.2
-transformers==4.35.2
-torch==2.2.2
-nltk==3.8.1
-spacy==3.7.2
-unidecode==1.3.6
-psycopg2-binary==2.9.9
-sqlalchemy==2.0.23
+numpy>=1.26.0
+pandas>=2.1.0
+scikit-learn>=1.3.0
+transformers>=4.35.0
+torch>=2.1.0
+nltk>=3.8.1
+spacy>=3.7.2
+unidecode>=1.3.6
+psycopg2-binary>=2.9.7
+sqlalchemy>=2.0.23 
