--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -31,4 +31,5 @@ COPY . .
 EXPOSE 8000
 
 # Comando para ejecutar el backend con Uvicorn y FastAPI
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["gunicorn", "main:app", "--worker-class", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000"]
+
